apps/waha/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: waha
spec:
  selector:
    app: waha
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: http
  type: ClusterIP
