apps/waha/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: waha
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: waha
      port:
        number: 3000
  tls:
    - hosts:
        - waha
